update Docker部署软件服务.md.
Signed-off-by: AgMonk <hjg719@139.com>