@@ -29,6 +29,34 @@ systemctl enable docker
 systemctl start docker
 ```
 
+## 构建自己通用基础镜像
+
+- 以`openjdk:18`作为基础镜像
+- 配置环境变量，包括时区以及JAVA使用的
+- 添加mysql的远程连接客户端，用于操作数据库的备份和还原
+- 添加中文字体(自行从系统字体文件夹获取)
+
+Dockerfile:
+
+```dockerfile
+FROM openjdk:18
+ENV TZ=Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN curl -fL -O https://downloads.mysql.com/archives/get/p/23/file/mysql-community-client-8.0.30-1.el8.x86_64.rpm \
+    -O https://downloads.mysql.com/archives/get/p/23/file/mysql-community-client-plugins-8.0.30-1.el8.x86_64.rpm \
+    -O https://downloads.mysql.com/archives/get/p/23/file/mysql-community-common-8.0.30-1.el8.x86_64.rpm \
+    -O https://downloads.mysql.com/archives/get/p/23/file/mysql-community-libs-8.0.30-1.el8.x86_64.rpm \
+       && rpm -ivh mysql-community-* && rm mysql-community-*
+ENV JAVA_OPTS='--add-opens java.base/java.lang=ALL-UNNAMED'
+ADD simhei.ttf  /usr/share/fonts/ttf-dejavu/simhei.ttf
+```
+
+build:
+
+```bash
+docker build -t myjdk:18 .
+```
+
 ## 开启远程连接及HTTPS证书
 
 打开配置文件`/usr/lib/systemd/system/docker.service`，找到一行以`ExecStart`开头的配置，在后面增加:
@@ -365,4 +393,3 @@ services:
     volumes:
     - /home/nexus/data:/nexus-data
 ```
-
